Changes
=======

Next
----

Bug fixes:

- ``mask()`` now takes the ``indexes`` keyword parameter that is common 
  elsewhere in the package (#1224, #1225).

1.0a12 (2017-12-01)
-------------------

New features:

- ``rasterio.open()`` now accepts URLs with GET parameters (#1121).
- Specific drivers and options can be used in ``rasterio.open()`` (#1000,
  #1158, #1196).
- ``rasterize()`` now supports GDAL's 'add' algorithm (#1195).
- GDAL version checking has been consolidated and improved (#1210).

Bug fixes:

- Pad boundless read VRTs so we don't overflow due to rounding (#1184).
- Boundless reads of WarpedVRTs are enabled by setting an effective crs
  (#1188).
- Raise ValueError when invalid width/height are passed to the
  ``InMemoryRaster`` constructor (#1144, #1194).
- GDAL errors that are turned into Rasterio exceptions are no longer also sent
  automatically to the logger. They may, of course, be logged by user code.
- Raster width and height were swapped in ``geometry_window()`` (#1200).

1.0a11 (2017-10-30)
-------------------

Breaking changes:

- ``rasterio.copy()`` moved to ``rasterio.shutil.copy() (#1173).
- ``DatasetBase.colorinterp`` is now a setter/getter that operates on
  a sequence of ``ColorInterp.<enum>`` in band order (#1134).

New features:

- Addition of ``rasterio.shutil.delete()`` and ``$ rio rm`` for deleting
  datasets (#929).
- Addition of ``rasterio.shutil.exists()`` for determining if a dataset
  exists (#1173).
- Addition of ``rasterio.shutil.copyfiles()`` to copy files associated
  with a datset from one location to another (#1173).
- Allow setting band color interpretation in a ``set_colorinterp()`` method
  and in ``$ rio edit-info --colorinterp`` (#1133).

Bug fixes:

- Reprojection of numpy arrays using GCPs has never worked due to faulty code,
  but has been fixed (#1166, #1171).
- A circular import situation has been resolved by moving dataset mixin classes