@@ -110,10 +110,10 @@ def driver_can_create_copy(drivername):
 cdef class DatasetBase(object):
     """Dataset base class."""
 
-    def __init__(self, path=None, driver=None, **kwargs):
+    def __init__(self, path=None, driver=None, sharing=True, **kwargs):
         cdef GDALDatasetH hds = NULL
         cdef int flags = 0
-        cdef int sharing_flag = (0x20 if kwargs.pop('sharing', True) else 0x0)
+        cdef int sharing_flag = (0x20 if sharing else 0x0)
 
         self._hds = NULL
 
